fixed navbar to show dark bg when collapsed

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -29,7 +29,7 @@ svg {
     max-height: fit-content;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 992px) {
   .navbar {
     background-color: rgb(85, 35, 12);
   }
